# CogniFold

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODEX_BRIEFING.md  CODEX_CRITIQUE.md  CODEX_ROUND2_BRIEFING.md  CODEX_ROUND2_CORRECTIONS.md  CODEX_ROUND2_PLAN.md  CODEX_ROUND2_RETRY.md  CODEX_ROUND4_FINAL.md  CODEX_ROUND4_FINALIZE.md  CODEX_ROUND5_DEBUG.md  CODEX_ROUND5_LEDGER_DEBUG_RESPONSE.md  CODEX_ROUND6_REGRESSION.md  CODEX_ROUND7_PER_CASE.md  CODEX_ROUND7_R2.md  CODEX_ROUND7_R3.md  CODEX_ROUND7_R4.md  CODEX_ROUND7_R5_INDEPENDENT.md  CODEX_ROUND7_R6.md  CODEX_ROUND7_R7_FULL_TR.md  CODEX_ROUND8_MS_FOCUS.md  Dockerfile  MS_ITER19_FAILURE_ANALYSIS.md  MS_R2_PUSHBACK.md  MS_R3_AUDIT.md  MS_R4_AGGRESSIVE.md  MS_R5_FRESH_PLAN.md  MS_R7_REALITY_CHECK.md  MS_R8_FINAL_CONFIRM.md  MS_R9_CODEX_REVIEW.md  Makefile  README.md  cognifold  config.example.yaml  deploy-pages.sh  docker-compose.yml  generate_demo.py  history.md  (+3 more)
.claude/: docguard_last_run  settings.json
.claude/commands/: sync-skills.md
.claude/hooks/: pre-commit-docguard.sh
.github/workflows/: cd.yml  ci.yml  claude-code-review.yml  pages.yml  (+1 more)
benchmarks/: _utils.py  analysis_utils.py  compare_fast.py  embedding_utils.py
configs/: babilong_profile.yaml  cognifold.yaml  locomo_profile.yaml  longmemeval_profile.yaml  musique_profile.yaml  mutual_profile.yaml  narrativeqa_profile.yaml  prompt_profiles.yaml  streamingqa_profile.yaml  tomi_profile.yaml
docs/: AGENT_PROTOCOL.md  ARCHITECTURE.md  BENCHMARK.md  CHANGELOG.md  COGNITION_PRINCIPLES.md  CONTRIBUTING.md  DEPLOYMENT.md  INTEGRATIONS.md  NORTH_STAR_METHODOLOGY.md  PHASES.md  PHILOSOPHY.md  PROMPTS.md  RESUME.md  ROADMAP_OMNI_STREAMING.md  tier3_design.md
docs-site/: index.html
scripts/: diag_ctx_bump.sh  e2e_supabase_test.py  exp_a_graph_dump.sh  ledger_spurious_sweep.py  ms_hc_monitor.py  parallel_longmemeval.sh  pre-commit.sh  rejudge_locomo_3vote.py  reproduce.sh  run-e2e.sh  run_iter29.sh  run_iter29b.sh  run_iter30.sh  run_iter30_commonstack.sh  run_iter30b_no_w3.sh  run_iter31.sh  run_iter32_ms_medium.sh  run_tier3.sh  run_unified_ms.sh  setup_branch_protection.sh  smoke_pre_screen.py  start_server.sh  test_retrieval_api.py  tr_health_check.py
tests/: test_smoke.py
(+421 files in other folders)
